--- a/src/index.html
+++ b/src/index.html
@@ -8,122 +8,146 @@
     <title>Tailwind Starter</title>
   </head>
   <body>
-    <header class="w-full py-[40px] bg-white shadow">
-      <nav
-        class="container px-6 mx-auto laptop:flex laptop:items-center laptop:justify-between"
-      >
-        <!-- class="flex items-center container mx-auto" -->
-        <div class="flex justify-between items-center">
-          <a class="inline-block" href="#">
-            <img
-              src="./svgs/site-logo--header.svg"
-              width="130"
-              height="28"
-              alt="Site logo"
-              aria-label="Care'Mental site logo is written"
-            />
-          </a>
-          <button
-            class="block laptop:hidden"
-            type="button"
-            onclick="Menu(this)"
-          >
-            <svg
-              width="18"
-              height="12"
-              viewBox="0 0 18 12"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M18 12H0V10H18V12ZM18 7H0V5H18V7ZM18 2H9V0H18V2Z"
-                fill="#959494"
-              />
-            </svg>
-          </button>
-        </div>
-        <ul
-          class="laptop:flex laptop:items-center z-[1] laptop:z-auto laptop:static absolute bg-white w-full left-0 laptop:w-auto laptop:py-0 py-0 laptop:pl-0 pl-7 laptop:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500"
+    <header
+      class="w-full bg-white shadow py-6 mobile:py-[30px] laptop:py-[40px]"
+    >
+      <div class="laptop:container mx-auto">
+        <nav
+          class="px-6 tablet:px-[10px] tablet:flex px-2 tablet:items-center tablet:justify-between"
         >
-          <!-- class="hidden laptop:grid grid-cols-4 grid-rows-1 gap-x-[40px] list-none m-0 p-0" -->
-          <li class="ml-[40px] my-6 lg:my-0">
-            <a class="capitalize text-darkergray" href="#">Home</a>
-          </li>
-          <li class="ml-[40px] my-6 lg:my-0">
-            <a class="capitalize text-darkergray" href="#">Service</a>
-          </li>
-          <li class="ml-[40px] my-6 lg:my-0">
-            <a class="capitalize text-darkergray" href="#">About us</a>
-          </li>
-          <li class="ml-[40px] my-6 lg:my-0">
-            <a class="capitalize text-darkergray" href="#">Testimonial</a>
-          </li>
-          <div class="ml-[80px]">
-            <button class="capitalize mr-[40px] text-darkergray" type="button">
-              Sign in
-            </button>
+          <!-- class="flex items-center container mx-auto" -->
+          <div class="flex justify-between items-center">
+            <a class="inline-block" href="#">
+              <img
+                src="./svgs/site-logo--header.svg"
+                width="130"
+                height="28"
+                alt="Site logo"
+                aria-label="Care'Mental site logo is written"
+              />
+            </a>
             <button
-              class="capitalize text-white py-[14px] px-[40px] font-medium rounded-[2px] bg-lightergray"
+              class="block tablet:hidden"
               type="button"
+              onclick="Menu(this)"
             >
-              Create account
+              <svg
+                width="18"
+                height="12"
+                viewBox="0 0 18 12"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M18 12H0V10H18V12ZM18 7H0V5H18V7ZM18 2H9V0H18V2Z"
+                  fill="#959494"
+                />
+              </svg>
             </button>
           </div>
-        </ul>
-      </nav>
+          <ul
+            class="tablet:flex tablet:items-center z-[1] tablet:z-auto tablet:static absolute bg-white w-full left-0 tablet:w-auto tablet:py-0 py-0 tablet:pl-0 pl-7 tablet:opacity-100 opacity-0 top-[-400px] transition-all ease-in duration-500"
+          >
+            <!-- class="hidden tablet:grid grid-cols-4 grid-rows-1 gap-x-[40px] list-none m-0 p-0" -->
+            <li class="ml-[40px] my-6 tablet:my-0">
+              <a class="capitalize text-darkergray font-roboto" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="ml-[40px] my-6 tablet:my-0">
+              <a class="capitalize text-darkergray font-roboto" href="#"
+                >Service</a
+              >
+            </li>
+            <li class="ml-[40px] my-6 tablet:my-0">
+              <a class="capitalize text-darkergray font-roboto" href="#"
+                >About us</a
+              >
+            </li>
+            <li class="ml-[40px] my-6 tablet:my-0">
+              <a class="capitalize text-darkergray font-roboto" href="#"
+                >Testimonial</a
+              >
+            </li>
+            <div class="ml-[80px]">
+              <button
+                class="capitalize mr-[40px] text-darkergray font-roboto"
+                type="button"
+              >
+                Sign in
+              </button>
+              <button
+                class="capitalize text-white py-[14px] px-[40px] font-roboto font-medium rounded-[2px] bg-lightergray"
+                type="button"
+              >
+                Create account
+              </button>
+            </div>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-      <section
-        class="container mx-auto grid grid-cols-2 grid-rows-1 gap-x-[40px] pt-[49px] pb-[80px] mb-[80px]"
-      >
-        <div class="">
+      <section class="px-6 laptop:container mx-auto">
+        <div
+          class="grid items-center justify-center pt-[49px] pb-[40px] mb-[40px] grid-cols-1 gap-x-0 gap-y-[40px] tablet:pb-[80px] mb-[80px] tablet:grid-cols-2 grid-rows-1 gap-x-[20px] laptop:gap-x-[40px]"
+        >
           <img
-            class="bg-lightergray"
+            class="bg-lightergray font-roboto h-[350px] w-full max-w-full tablet:w-11/12 h-[476px] laptop:w-[573px] w-full h-[476px]"
             src="#"
             alt="Added plaholder image from website of unsplash"
             width="573"
             height="476"
           />
           <!-- <img class="bg-lightergray" src="https://unsplash.it/573/476" alt="Added plaholder image from website of unsplash" width="573" height="476"> -->
+          <article>
+            <h2
+              class="font-bold text-headingColor mb-2 text-2xl laptop:text-[40px] leading-[48px]"
+            >
+              Take care of your
+              <strong class="font-bold text-lightergray">mental</strong> health
+              by treating with us
+            </h2>
+            <p
+              class="text-400 text-darkergray mb-[40px] max-w-[529px] w-full font-lato"
+            >
+              Join us and you will experience a very significant change in your
+              mentality. We make sure your mental health will be calm and
+              peaceful with our treatment
+            </p>
+            <button
+              class="capitalize text-white py-[14px] font-roboto px-[40px] font-medium rounded-[2px] bg-lightergray"
+              type="button"
+            >
+              Get started
+            </button>
+          </article>
         </div>
-        <article class="pt-[82px]">
-          <h2 class="font-bold text-[40px] text-headingColor mb-2">
-            Take care of your
-            <strong class="font-bold text-lightergray">mental</strong> health by
-            treating with us
-          </h2>
-          <p class="text-400 text-darkergray mb-[40px]">
-            Join us and you will experience a very significant change in your
-            mentality. We make sure your mental health will be calm and peaceful
-            with our treatment
-          </p>
-          <button
-            class="capitalize text-white py-[14px] px-[40px] font-medium rounded-[2px] bg-lightergray"
-            type="button"
-          >
-            Get started
-          </button>
-        </article>
       </section>
-      <section class="container mx-auto py-[80px] mb-[70px]">
-        <h2
-          class="flex font-bold text-[40px] leading-[50px] text-headingColor mb-[40px] max-w-[590px] w-full before:h-[100px] before:w-1 before:content before:bg-lightergray before:mr-4"
+      <section class="px-6 laptop:container mx-auto">
+        <div class="py-[40px] mb-[70px] tablet:py-[80px]">
+          <h2
+          class="flex font-bold items-center text-2xl text-headingColor mb-[40px] max-w-[590px] w-full before:h-[64px] before:w-1 before:content before:bg-lightergray before:mr-4 tablet:before:h-[100px] tablet:text-[40px] leading-[45px] laptop:leading-[50px]"
         >
           What do you get when you use our services?
         </h2>
         <ul
-          class="grid sm:grid-cols-1 grid-rows-3 laptop:grid-cols-2 grid-rows-2 gap-y-[40px] lg:grid-cols-3 grid-rows-1 gap-x-[40px]"
+          class="grid grid-cols-1 tablet:grid-cols-2 gap-y-[40px] laptop:grid-cols-3 grid-rows-1 gap-x-[40px]"
         >
           <li class="py-[56px] px-[48px] rounded-[16px] bg-scarlet">
             <p
               class="flex mb-[23px] before:content before:h-[74px] before:w-2 before:bg-lightergray before:mr-4"
             >
-              <span class="flex flex-col text-2xl text-lightergray">
-                <strong class="fond-black text-[32px] mb-[5px]">500+</strong>
+              <span
+                class="flex flex-col text-2xl leading-[37px] font-roboto text-lightergray"
+              >
+                <strong class="font-black text-[32px] mb-[5px]">500+</strong>
                 Employee
               </span>
             </p>
-            <p class="leading-[28px] text-darkergray">
+            <p
+              class="leading-[28px] text-darkergray font-roboto text-sm leading-[28px]"
+            >
               We have highly skilled employees in this field, and are
               experienced in cleaning your favorite shoes
             </p>
@@ -133,12 +157,16 @@
             <p
               class="flex mb-[23px] before:content before:h-[74px] before:w-2 before:bg-lightergray before:mr-4"
             >
-              <span class="flex flex-col text-2xl text-lightergray">
-                <strong class="fond-black text-[32px] mb-[5px]">12+</strong>
+              <span
+                class="flex flex-col text-2xl leading-[37px] font-roboto text-lightergray"
+              >
+                <strong class="font-black text-[32px] mb-[5px]">12+</strong>
                 Treatment
               </span>
             </p>
-            <p class="leading-[28px] text-darkergray">
+            <p
+              class="leading-[28px] text-darkergray font-roboto text-sm leading-[28px]"
+            >
               We already have more than 65 branches spread throughout Indonesia,
               so you will be very easy to find us
             </p>
@@ -148,18 +176,23 @@
             <p
               class="flex mb-[23px] before:content before:h-[74px] before:w-2 before:bg-lightergray before:mr-4"
             >
-              <span class="flex flex-col text-2xl text-lightergray">
-                <strong class="fond-black text-[32px] mb-[5px]">6000+</strong>
+              <span
+                class="flex flex-col text-2xl leading-[37px] font-roboto text-lightergray"
+              >
+                <strong class="font-black text-[32px] mb-[5px]">6000+</strong>
                 Happy customers
               </span>
             </p>
-            <p class="leading-[28px] text-darkergray">
+            <p
+              class="leading-[28px] text-darkergray font-roboto text-sm leading-[28px]"
+            >
               We make sure you will be happy with our services, your shoes will
               be very clean, fragrant and will be durable with the treatment we
               do
             </p>
           </li>
         </ul>
+        </div>
       </section>
       <section class="container mx-auto py-[80px] bg-scarlet mb-[80px]">
         <h2
