feat: completed responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         >
           <img
             class="bg-lightergray font-roboto h-[350px] w-full max-w-full tablet:w-11/12 h-[476px] laptop:w-[573px] w-full h-[476px]"
-            src="#"
+            src="https://unsplash.it/573/476"
             alt="Added plaholder image from website of unsplash"
             width="573"
             height="476"
@@ -221,7 +221,7 @@
             
           </article>
           <div class="max-w-[1000px] w-full laptop:max-w-[594px] order-1 laptop:order-2 laptop:ml-4 h-auto">
-            <img class="order-2 bg-lightergray mb-[40px]" src="#" alt="placeholder image" width="654" height="598">
+            <img class="order-2 bg-lightergray mb-[40px]" src="https://unsplash.it/654/598" alt="placeholder image" width="654" height="598">
           </div>
         </div>
       </section>
@@ -233,13 +233,13 @@
             Some of our ways to heal your mental disorders
           </h2>
           <ul class="list-none p-0 m-0">
-            <li class="flex flex-col mobile:items-center laptop:flex-nowrap">
+            <li class="flex flex-wrap mobile:items-center laptop:flex-nowrap">
               <div
-                class="max-w-full w-full grow tablet:mr-[20px] laptop:mr-[80px] max-w-[600px] max-h-[600px]"
+                class="w-full mb-[40px] max-w-full h-auto laptop:mb-0 laptop:mr-[80px]"
               >
                 <img
                   class="bg-lightergray w-full"
-                  src="#"
+                  src="https://unsplash.it/600/600"
                   alt="Added plaholder image from website of unsplash"
                   width="600"
                   height="600"
@@ -247,9 +247,9 @@
               </div>
               <!-- <img class="bg-lightergray" src="https://unsplash.it/573/476" alt="Added plaholder image from website of unsplash" width="573" height="476"> -->
 
-              <article class="w-full max-w-[520px]">
+              <article class="w-full pb-[40px] tablet:max-w-[520px] ">
                 <h2
-                  class="font-bold text-2xl text-lightergray mb-2 laptop:text-[40px]"
+                  class="font-bold text-2xl text-lightergray mb-[32px] mobile:text-center laptop:text-left laptop:mb-10 laptop:text-[40px] leading-[50px]"
                 >
                   Meditation
                 </h2>
@@ -268,20 +268,24 @@
                 </p>
               </article>
             </li>
-            <li class="flex items-center">
+            <li class="flex flex-wrap mobile:items-center laptop:flex-nowrap">
+              <div
+                class="w-full mb-[40px] order-1 laptop:order-2 laptop:mb-0 laptop:mr-[80px]"
+              >
               <img
-                class="bg-lightergray ml-[80px] order-2"
-                src="#"
+                class="bg-lightergray w-full laptop:ml-[80px]"
+                src="https://unsplash.it/600/600"
                 alt="Added plaholder image from website of unsplash"
                 width="600"
                 height="600"
               />
+              </div>
               <!-- <img class="bg-lightergray" src="https://unsplash.it/573/476" alt="Added plaholder image from website of unsplash" width="573" height="476"> -->
 
               <article
-                class="pt-[133px] pb-[124px] w-full max-w-[520px] order-1"
+                class="pt-[40px] w-full tablet:max-w-[520px] order-2 laptop:order-1"
               >
-                <h2 class="font-bold text-[40px] text-lightergray mb-2">
+                <h2 class="font-bold text-2xl text-lightergray mb-[32px] mobile:text-center laptop:text-left laptop:mb-10 laptop:text-[40px] leading-[50px]">
                   Positive Thinking
                 </h2>
                 <p class="text-400 text-darkergray leading-[32px] mb-[40px]">
@@ -300,7 +304,7 @@
       </section>
       <section>
         <div class="w-full relative bg-footerColor mb-[80px]">
-          <div class="flex h-[534px] items-center justify-center">
+          <div class="flex h-[235px] items-center justify-center tablet:h-[534px]">
             <span class="inline-block bg-mediumgray rounded-full cursor-pointer">
               <svg class="w-[40px] h-[40px] p-3 pl-4 laptop:w-[100px] laptop:h-[100px] laptop:p-[30px] laptop:pl-[40px]" width="30" height="36" viewBox="0 0 30 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M30 18L4.45043e-07 35.3205L3.19526e-08 0.679491L30 18Z" fill="white"/>
